--- a/34-intro-and-loading-progress/src/index.html
+++ b/34-intro-and-loading-progress/src/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>34 - Intro and loading progress</title>
-</head>
-<body>
+  </head>
+  <body>
     <canvas class="webgl"></canvas>
-</body>
+    <div class="loading-bar"></div>
+  </body>
 </html>
